Added list of cities I want to visit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 
  <body>
+ 	<h2>Cities and Towns I've Lived In</h2>
  	<ul>
  		<li>Butte, MT</li>
  		<li>Belt, MT</li>
@@ -17,9 +18,14 @@
  		<li>Kalispell, MT</li>
  		<li>Denver, CO</li>
  	</ul>
- 	
+ 	<h2>Cities I would like to visit</h2>
+ 	<ol>
+ 		<li>Amsterdam</li>
+ 		<li>Rome</li>
+ 		<li>Cape Town</li>
+ 	</ol>
+ 			
 
 
 
 
- 		
