Added explanation for each list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
  <body>
  	<h1>Cities and Towns I've Lived In</h1>
+ 	<p>I was born in Butte, raised in Belt, got my undergrad in Bozeman, went on a student exchange to Chapel Hill, spent a summer hiking in Colorado Springs, moved to Seattle for a job, moved to Have for a job, got my MBA in Missoula, joined a startup in Kalispell and moved to Denver for gSchool.</p>
  	<ul>
  		<li>Butte, MT</li>
  		<li>Belt, MT</li>
@@ -20,11 +21,14 @@
  	</ul>
 
  	<h1>Cities I would like to visit</h1>
+ 	<p>I would like to visit Dublin because I'm half Irish, Rome because I'm half Italian and Cape Town because my step-uncle came from there</p>
  	<ol>
- 		<li>Amsterdam</li>
+ 		<li>Dublin</li>
  		<li>Rome</li>
  		<li>Cape Town</li>
  	</ol>
+ 			
+
  			
 
 
