Added spans to each city

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
  	<h1>Cities and Towns I've Lived In</h1>
  	<p>I was born in Butte, raised in Belt, got my undergrad in Bozeman, went on a student exchange to Chapel Hill, spent a summer hiking in Colorado Springs, moved to Seattle for a job, moved to Have for a job, got my MBA in Missoula, joined a startup in Kalispell and moved to Denver for gSchool.</p>
  	<ul>
- 		<li>Butte, MT</li>
- 		<li>Belt, MT</li>
- 		<li>Bozeman, MT</li>
- 		<li>Chapel Hill, NC</li>
- 		<li>Colorado Springs, CO</li>
- 		<li>Seattle, WA</li>
- 		<li>Havre, MT</li>
- 		<li>Missoula, MT</li>
- 		<li>Kalispell, MT</li>
- 		<li>Denver, CO</li>
+ 		<li>Butte, MT<span>&#8224;</span></li>
+ 		<li>Belt, MT<span>&#8224;</span></li>
+ 		<li>Bozeman, MT<span>&#8224;</span></li>
+ 		<li>Chapel Hill, NC<span>&#8224;</span></li>
+ 		<li>Colorado Springs, CO<span>&#8224;</span></li>
+ 		<li>Seattle, WA<span>&#8224;</span></li>
+ 		<li>Havre, MT<span>&#8224;</span></li>
+ 		<li>Missoula, MT<span>&#8224;</span></li>
+ 		<li>Kalispell, MT<span>&#8224;</span></li>
+ 		<li>Denver, CO<span>&#8224;</span></li>
  	</ul>
 
  	<h1>Cities I would like to visit</h1>
  	<p>I would like to visit Dublin because I'm half Irish, Rome because I'm half Italian and Cape Town because my step-uncle came from there</p>
  	<ol>
- 		<li>Dublin</li>
- 		<li>Rome</li>
- 		<li>Cape Town</li>
+ 		<li>Dublin<span>&#8225;</span></li>
+ 		<li>Rome<span>&#8225;</span></li>
+ 		<li>Cape Town<span>&#8225;</span></li>
  	</ol>
  			
 
- 			
+
 
 
 
