Added strong and em to second list

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
  	<h1>Cities I would like to visit</h1>
  	<p>I would like to visit Dublin because I'm half Irish, Rome because I'm half Italian and Cape Town because my step-uncle came from there</p>
  	<ol>
- 		<li>Dublin<span>&#8225;</span></li>
- 		<li>Rome<span>&#8225;</span></li>
- 		<li>Cape Town<span>&#8225;</span></li>
+ 		<li><strong>Dublin</strong><span>&#8225;</span></li>
+ 		<li><em>Rome</em><span>&#8225;</span></li>
+ 		<li><strong>Cape Town<span>&#8225;</span></span></li>
  	</ol>
  			
 
