--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
  	<ol>
  		<li><strong>Dublin</strong><span>&#8225;</span></li>
  		<li><em>Rome</em><span>&#8225;</span></li>
- 		<li><strong>Cape Town<span>&#8225;</span></span></li>
+ 		<li><strong>Cape Town</strong></span>&#8225;</span></li>
  	</ol>
- 			
-
-
-
+ 	<img src="https://students.galvanize.com/assets/galvanize-logo-ac9865cc4217b77aebbce9e63670dd96.svg" alt="Galvanize" style="width:220px;height:220px;">
+</body>
 
 
 
