--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
  		<li><em>Rome</em><span>&#8225;</span></li>
  		<li><strong>Cape Town</strong></span>&#8225;</span></li>
  	</ol>
+
  	<img src="https://students.galvanize.com/assets/galvanize-logo-ac9865cc4217b77aebbce9e63670dd96.svg" alt="Galvanize" style="width:220px;height:220px;">
+	<audio src="https://upload.wikimedia.org/wikipedia/en/0/04/Rayman_2_music_sample.ogg" controls autoplay></audio>
+	<video src="https://upload.wikimedia.org/wikipedia/en/2/28/Illusion_movie.ogg" width="375" height="280" controls autoplay></video>
+
 </body>
 
 
