--- a/favorites.html
+++ b/favorites.html
@@ -9,8 +9,9 @@
   <table>
   	<thead>
   		<tr>
-  			<th>First name</th>
-    		<th>Last name</th>
+  			<th>First Name</th>
+    		<th>Last Name</th>
+    		<th>Favorite Animal</th>
   		</tr>
   	</thead>
   	<tr>
