--- a/favorites.html
+++ b/favorites.html
@@ -5,7 +5,6 @@
   </head>
 
 <body>
-
   <table>
   	<thead>
   		<tr>
@@ -15,8 +14,9 @@
   		</tr>
   	</thead>
   	<tr>
-  		<td></td>
-  		<td></td>
+  		<td>Lou</td>
+  		<td>Fontana</td>
+  		<td>Elk</td>
   	</tr>
   	</table>
 
